# touch-dock

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  agent.md  desktop.css  desktop.js  index.html  package.json  pnpm-lock.yaml  skills-lock.json  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
.impeccable/: design.json
docs/: protocol.md
mobile/: app.js  index.html  style.css
mobile-src/: app.js  connection-errors.js  connection-errors.test.js  crypto.js  crypto.test.js  input-behavior.js  input-behavior.test.js
src/: App.css  App.tsx  ControlLayoutView.tsx  SettingsDialog.tsx  TrayPanel.tsx  i18n.ts  main.tsx  theme.ts  update.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: control_layout.rs  crypto.rs  dock_visibility.rs  input.rs  lib.rs  main.rs  protocol.rs  tray.rs  updates.rs
src-tauri/src/platform/: macos.rs  mod.rs  unsupported.rs  windows.rs
src-tauri/src/server/: mod.rs  pairing.rs  rate_limit.rs
tools/: generate-release-notes.mjs  validate-release-version.mjs
tools/windows-driver-check/: Cargo.toml
tools/windows-driver-check/src/: main.rs
