[package]
name = "touch-dock"
version = "0.2.8"
description = "Turn a phone browser into a secure local remote for a computer."
authors = ["TouchDock"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "touch_dock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
getrandom = "0.3"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
local-ip-address = "0.6"
p256 = { version = "0.13", features = ["ecdh"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2.6"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
zeroize = { version = "1.8", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.25", features = ["highsierra"] }
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSEvent", "NSGraphicsContext", "objc2-core-graphics"] }
objc2-core-graphics = { version = "0.3", default-features = false, features = ["CGEvent", "CGEventTypes"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSGeometry"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
] }

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.29"
