[package]
name = "touch-dock-windows-driver-check"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
] }
